--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
 
         <!-- profile img -->
         <div class="profile-photo">
-          <img src="./public/images/profile/profile_1.png" alt="profile photo">
+          <img  alt="profile photo">
 
         </div>
       </div>
@@ -53,11 +53,11 @@
        <div class="main-left">
             <a href="/" class="profile">
               <div class="profile-photo">
-                <img src="./public/images/profile/profile_1.png" alt="">
+                <img alt="profile-photo">
               </div>
               <div class="profile-description">
                 <h5>Elden Lord</h5>
-                <h5>@EledenRing</h5>
+                <h5 style="opacity: 0.6;">@EledenRing</h5>
               </div>
             </a>
 
@@ -114,6 +114,62 @@
 
       <!-- main mid -->
        <div class="main-mid">
+
+
+        <div class="main-mid-card-wrapper">
+<!-- 1 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+
+<!-- 2 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+<!-- 3 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+
+<!-- 4 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+<!-- 5 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+<!-- 6 -->
+          <figure class="main-mid-card popup-trigger">
+            <img src="" alt="highline-photo" loading="lazy">
+            <div class="profile-photo">
+              <img src="" alt="profile-photo" loading="lazy">
+            </div>
+            <p></p>
+          </figure>
+
+
+        </div>
 
        </div>
       <!-- main right -->
