--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,51 +119,51 @@
         <div class="main-mid-card-wrapper">
 <!-- 1 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
 
 <!-- 2 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img  alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
 <!-- 3 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img  alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
 
 <!-- 4 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img  alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
 <!-- 5 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img  alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
 <!-- 6 -->
           <figure class="main-mid-card popup-trigger">
-            <img src="" alt="highline-photo" loading="lazy">
+            <img  alt="highline-photo" loading="lazy">
             <div class="profile-photo">
-              <img src="" alt="profile-photo" loading="lazy">
+              <img  alt="profile-photo" loading="lazy">
             </div>
             <p></p>
           </figure>
