--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,6 +125,19 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                Walking down the bustling city streets, I noticed a small cafe tucked away in a quiet corner. Curious, I
+                stepped inside and was greeted by the aroma of freshly
+                brewed coffee. As I sipped my drink, I overheard a group of friends sharing laughter and stories at a
+                nearby table. In that moment, I realized that even in the
+                fast-paced world, moments of connection and joy are found in the simplest of places.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
 
 <!-- 2 -->
           <figure class="main-mid-card popup-trigger">
@@ -134,6 +147,18 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                In the bustling city, two strangers with diverse backgrounds crossed paths on a rainy day. Mark, a
+                passionate photographer, sheltered under a café awning, capturing
+                the rain-soaked streets. Mia, a talented painter, was also seeking refuge, her canvas and brushes in
+                hand.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
 <!-- 3 -->
           <figure class="main-mid-card popup-trigger">
             <img  alt="highline-photo" loading="lazy">
@@ -142,6 +167,19 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                Once upon a time, in a small village, there lived a kind-hearted boy named Alex. Alex always looked out
+                for others and was known for his willingness to help anyone
+                in need. One sunny morning, Alex saw his elderly neighbor, Mrs. Jenkins, struggling to carry her
+                groceries into her house. Without hesitation, he rushed over and
+                offered his assistance. Mrs. Jenkins was grateful for his help and smiled warmly at him.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
 
 <!-- 4 -->
           <figure class="main-mid-card popup-trigger">
@@ -151,6 +189,17 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                In this vibrant city, we embark on an exploration of the unknown journey together. From street food to
+                shimmering neon lights, every moment is filled with
+                surprises. Let's create memories together and leave behind our own story.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
 <!-- 5 -->
           <figure class="main-mid-card popup-trigger">
             <img  alt="highline-photo" loading="lazy">
@@ -159,6 +208,17 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                Amidst nature's embrace, we find serenity and beauty at every turn. A tranquil escape from the hustle
+                and bustle, where time seems to slow down. Let's cherish these
+                moments and connect with the world around us.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
 <!-- 6 -->
           <figure class="main-mid-card popup-trigger">
             <img  alt="highline-photo" loading="lazy">
@@ -167,6 +227,18 @@
             </div>
             <p></p>
           </figure>
+          <div class="popup">
+            <div class="popup-content">
+              <h2>Stories</h2>
+              <p>
+                Amidst the tranquil mountains, we found our escape. The crisp air and majestic views filled our souls
+                with peace. Cherishing these moments of serenity and
+                connection with nature.
+              </p>
+              <button class="popup-close">Close</button>
+            </div>
+          </div>
+        </div>
 
 
         </div>
