--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,268 +1,275 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Top Social</title>
+    <!-- icons  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top Social</title>
-  <!-- icons  -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
-
-<body>
-
-  <!-- nav -->
-  <nav>
-    <div class="nav-container">
-      <!-- logo -->
-      <div class="logo">
-        <a href="/">TOPSOCIAL</a>
-      </div>
-      <!-- search bar -->
-      <div class="search-bar">
-        <i class="bi bi-search"></i>
-        <input type="text" placeholder="Search for Creator">
-      </div>
-      <!-- profile -->
-      <div class="profile">
-        <!-- button -->
-        <div class="create">
-          <button class="btn btn-primary">Create</button>
-
+  <body>
+    <!-- nav -->
+    <nav>
+      <div class="nav-container">
+        <!-- logo -->
+        <div class="logo">
+          <a href="/">TOPSOCIAL</a>
         </div>
+        <!-- search bar -->
+        <div class="search-bar">
+          <i class="bi bi-search"></i>
+          <input type="text" placeholder="Search for Creator" />
+        </div>
+        <!-- profile -->
+        <div class="profile">
+          <!-- button -->
+          <div class="create">
+            <button class="btn btn-primary">Create</button>
+          </div>
 
-        <!-- profile img -->
-        <div class="profile-photo">
-          <img  alt="profile photo">
-
+          <!-- profile img -->
+          <div class="profile-photo">
+            <img alt="profile photo" />
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
+    <!-- main -->
+    <main>
+      <div class="container">
+        <!-- main left -->
 
-
-  <!-- main -->
-  <main>
-    <div class="container">
-
-      <!-- main left -->
-
-      <!-- profile -->
-       <div class="main-left">
-            <a href="/" class="profile">
-              <div class="profile-photo">
-                <img alt="profile-photo">
-              </div>
-              <div class="profile-description">
-                <h5>Elden Lord</h5>
-                <h5 style="opacity: 0.6;">@EledenRing</h5>
-              </div>
-            </a>
-
-      <!-- side bar -->
-       <nav class="sidebar">
-        <ul>
-          <li>
-            <a class="menu-item" href="#">
-              <h3>Home</h3>
-            </a>
-          </li>
-          <li>            
-            <a  class="menu-item" href="#">
-            <h3>Explore</h3>
+        <!-- profile -->
+        <div class="main-left">
+          <a href="/" class="profile">
+            <div class="profile-photo">
+              <img alt="profile-photo" />
+            </div>
+            <div class="profile-description">
+              <h5>Elden Lord</h5>
+              <h5 style="opacity: 0.6">@EledenRing</h5>
+            </div>
           </a>
-        </li>
-          <li>
-            <a class="menu-item" href="#">
-              <h3>Notification</h3>
-            </a>
-          </li>
-          <li>
-            <a class="menu-item" href="#">
-            <h3>Message</h3>
-          </a></li>
-          <li>
-            <a  class="menu-item" href="#">
-              <h3>Bookmarks</h3>
-            </a>
-          </li>
-          <li>
-            <a class="menu-item" href="#">
-              <h3>Analytics</h3>
-            </a>
-          </li>
-          <li>
-            <a class="menu-item" href="#">
-              <h3>Theme</h3>
-            </a>
-          </li>
-          <li>
-            <a class="menu-item" href="#">
-              <h3>Setting</h3>
-            </a>
-          </li>
-        </ul>
-       </nav>
-      <!-- side button -->
-      <button class="side-btn">Create Post</button>
-       </div>
 
-
-
-
-      <!-- main mid -->
-       <div class="main-mid">
-
-
-        <div class="main-mid-card-wrapper">
-<!-- 1 -->
-          <figure class="main-mid-card popup-trigger">
-            <img alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                Walking down the bustling city streets, I noticed a small cafe tucked away in a quiet corner. Curious, I
-                stepped inside and was greeted by the aroma of freshly
-                brewed coffee. As I sipped my drink, I overheard a group of friends sharing laughter and stories at a
-                nearby table. In that moment, I realized that even in the
-                fast-paced world, moments of connection and joy are found in the simplest of places.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
-
-<!-- 2 -->
-          <figure class="main-mid-card popup-trigger">
-            <img  alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                In the bustling city, two strangers with diverse backgrounds crossed paths on a rainy day. Mark, a
-                passionate photographer, sheltered under a café awning, capturing
-                the rain-soaked streets. Mia, a talented painter, was also seeking refuge, her canvas and brushes in
-                hand.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
-<!-- 3 -->
-          <figure class="main-mid-card popup-trigger">
-            <img  alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                Once upon a time, in a small village, there lived a kind-hearted boy named Alex. Alex always looked out
-                for others and was known for his willingness to help anyone
-                in need. One sunny morning, Alex saw his elderly neighbor, Mrs. Jenkins, struggling to carry her
-                groceries into her house. Without hesitation, he rushed over and
-                offered his assistance. Mrs. Jenkins was grateful for his help and smiled warmly at him.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
-
-<!-- 4 -->
-          <figure class="main-mid-card popup-trigger">
-            <img  alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                In this vibrant city, we embark on an exploration of the unknown journey together. From street food to
-                shimmering neon lights, every moment is filled with
-                surprises. Let's create memories together and leave behind our own story.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
-<!-- 5 -->
-          <figure class="main-mid-card popup-trigger">
-            <img  alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                Amidst nature's embrace, we find serenity and beauty at every turn. A tranquil escape from the hustle
-                and bustle, where time seems to slow down. Let's cherish these
-                moments and connect with the world around us.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
-<!-- 6 -->
-          <figure class="main-mid-card popup-trigger">
-            <img  alt="highline-photo" loading="lazy">
-            <div class="profile-photo">
-              <img  alt="profile-photo" loading="lazy">
-            </div>
-            <p></p>
-          </figure>
-          <div class="popup">
-            <div class="popup-content">
-              <h2>Stories</h2>
-              <p>
-                Amidst the tranquil mountains, we found our escape. The crisp air and majestic views filled our souls
-                with peace. Cherishing these moments of serenity and
-                connection with nature.
-              </p>
-              <button class="popup-close">Close</button>
-            </div>
-          </div>
+          <!-- side bar -->
+          <nav class="sidebar">
+            <ul>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Home</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Explore</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Notification</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Message</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Bookmarks</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Analytics</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Theme</h3>
+                </a>
+              </li>
+              <li>
+                <a class="menu-item" href="#">
+                  <h3>Setting</h3>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- side button -->
+          <button class="side-btn">Create Post</button>
         </div>
 
+        <!-- main mid -->
+        <div class="main-mid">
+          <!-- cards -->
+          <div class="main-mid-card-wrapper">
+            <!-- 1 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  Walking down the bustling city streets, I noticed a small cafe
+                  tucked away in a quiet corner. Curious, I stepped inside and
+                  was greeted by the aroma of freshly brewed coffee. As I sipped
+                  my drink, I overheard a group of friends sharing laughter and
+                  stories at a nearby table. In that moment, I realized that
+                  even in the fast-paced world, moments of connection and joy
+                  are found in the simplest of places.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+
+            <!-- 2 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  In the bustling city, two strangers with diverse backgrounds
+                  crossed paths on a rainy day. Mark, a passionate photographer,
+                  sheltered under a café awning, capturing the rain-soaked
+                  streets. Mia, a talented painter, was also seeking refuge, her
+                  canvas and brushes in hand.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+            <!-- 3 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  Once upon a time, in a small village, there lived a
+                  kind-hearted boy named Alex. Alex always looked out for others
+                  and was known for his willingness to help anyone in need. One
+                  sunny morning, Alex saw his elderly neighbor, Mrs. Jenkins,
+                  struggling to carry her groceries into her house. Without
+                  hesitation, he rushed over and offered his assistance. Mrs.
+                  Jenkins was grateful for his help and smiled warmly at him.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+
+            <!-- 4 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  In this vibrant city, we embark on an exploration of the
+                  unknown journey together. From street food to shimmering neon
+                  lights, every moment is filled with surprises. Let's create
+                  memories together and leave behind our own story.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+            <!-- 5 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  Amidst nature's embrace, we find serenity and beauty at every
+                  turn. A tranquil escape from the hustle and bustle, where time
+                  seems to slow down. Let's cherish these moments and connect
+                  with the world around us.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+            <!-- 6 -->
+            <figure class="main-mid-card popup-trigger">
+              <img alt="highline-photo" loading="lazy" />
+              <div class="profile-photo">
+                <img alt="profile-photo" loading="lazy" />
+              </div>
+              <p></p>
+            </figure>
+            <div class="popup">
+              <div class="popup-content">
+                <h2>Stories</h2>
+                <p>
+                  Amidst the tranquil mountains, we found our escape. The crisp
+                  air and majestic views filled our souls with peace. Cherishing
+                  these moments of serenity and connection with nature.
+                </p>
+                <button class="popup-close">Close</button>
+              </div>
+            </div>
+          </div>
+          <!-- On your mind -->
+          <div class="main-mid-thought-wrapper">
+            <!-- profile photo -->
+            <div class="profile-photo">
+              <img alt="profile-photo" loading="lazy" />
+            </div>
+
+            <input type="text" autocomplete="off" />
+            <button class="btn btn-primary">Post</button>
+          </div>
+
+          <!-- mid posts -->
+          <div class="main-mid-post-wrapper">
+
+          </div>
+
+
+
+
+
+
 
         </div>
 
-       </div>
-      <!-- main right -->
-       <div class="main-right">
+        <!-- main right -->
+        <div class="main-right"></div>
+      </div>
+    </main>
 
-       </div>
-
-    </div>
-
-  </main>
-
-
-
-
-
-
-
-
-  <!-- nav -->
-  <!-- nav -->
-  <script type="module" src="/index.js"></script>
-</body>
-
+    <!-- nav -->
+    <!-- nav -->
+    <script type="module" src="/index.js"></script>
+  </body>
 </html>
