--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
 
     <!-- main -->
     <main>
-      <div class="container">
+      <div class="main-container">
         <!-- main left -->
 
         <!-- profile -->
@@ -255,16 +255,51 @@
 
           </div>
 
+        </div>
+
+        <!-- main right -->
+        <div class="main-right">
+          <!-- main-right-message-list -->
+          <div class="main-right-wrapper">
+            <div class="main-right-message-container">
+              <h2>Message</h2>
+              <i class="uil uil-edit"></i>
+
+
+            </div>
+
+            <div class="search-box">
+              <input class="search-txt" name="text" type="text" placeholder="Search Message" />
+              <a href="/" class="search-btn" aria-label="search-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="70" height="70" viewBox="0 0 50 50">
+                  <path
+                    d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z">
+                  </path>
+                </svg>
+              </a>
+
+            </div>
+            <div class="friend-checkbox">
+              <h3 class="friend-checkbox-type active">Primary</h3>
+              <h3 class="friend-checkbox-type">General</h3>
+              <h3 class="friend-checkbox-type">Requests</h3>
+            </div>
+            <div class="friend-message-list">
+            </div>
+            <div class="main-right-wrapper">
+              <div class="main-right-message-container">
+                <h2>Request</h2>
+              </div>
+            </div>
 
 
 
+
+          </div>
 
 
 
         </div>
-
-        <!-- main right -->
-        <div class="main-right"></div>
       </div>
     </main>
 
